# Timelapse-Auto-Script

./: .gitignore  README.md  README_CN.md  auto_timelapse.command  auto_timelapse.sh  auto_timelapse_loop.command  auto_timelapse_loop.sh  pyproject.toml  requirements-dev.txt  requirements.txt  start_gui.bat  start_gui.command  start_timelapse_eternal.command  start_timelapse_eternal.sh  timelapse.py
config/: auto_timelapse.conf  auto_timelapse.example.yaml  auto_timelapse.yaml  webhook.example.yaml  webhook.yaml
lib/: bracketlapse_notify.sh  camera_notify.sh  common.sh  config.sh  disk.sh  eternal_archive.sh  eternal_camera_monitor.sh  eternal_capture.sh  eternal_worker.sh  keyboard_control.sh  runner.sh  schedule.sh  webhook.sh  webhook_image.sh  workflow_control.sh
scripts/: auto_timelapse.sh  build_debug.py  build_package.py  build_release.py
src/timelapse_manager/: __init__.py  __main__.py  child_process.py  cli.py  config.py  diagnostics.py  errors.py  gui.py  io_utils.py  maintenance.py  paths.py  presets.py  process_utils.py  release_entry.py  runtime.py  runtime_check.py  schedule.py  service.py  task_chain.py  task_factory.py  task_handoff.py  task_store.py  webhook.py  worker.py
tests/: __init__.py  test_config_and_store.py  test_eternal_archive.py  test_gui_task_creation.py  test_integration.py  test_packaging.py  test_runtime_check.py  test_safety_and_compatibility.py  test_schedule.py  test_table_layout.py  test_task_chains.py  test_task_continuation_integration.py  test_task_progress.py
tests/fixtures/: fake_bracketlapse.py  fake_camera.py
(+10 files in other folders)
